fix(style): line break had overflown height

--- a/src/components/header/HeaderCategories.scss
+++ b/src/components/header/HeaderCategories.scss
@@ -154,7 +154,7 @@ $breakpoint-desktop: 1100px;
   display: flex;
 
   width: 100%;
-  height: 40px;
+  min-height: 40px;
   margin-bottom: 16px;
 
   background: var(--color-tertiary);
